src/styles/global.css
@import 'tailwindcss';

@font-face {
  font-family: 'Alegreya';
  src:
    url('/fonts/Alegreya-Regular.woff2') format('woff2'),
    url('/fonts/Alegreya-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Alegreya';
  src:
    url('/fonts/Alegreya-Italic.woff2') format('woff2'),
    url('/fonts/Alegreya-Italic.woff') format('woff');
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: 'Alegreya Sans';
  src:
    url('/fonts/AlegreyaSans-Regular.woff2') format('woff2'),
    url('/fonts/AlegreyaSans-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Alegreya Sans';
  src:
    url('/fonts/AlegreyaSans-Bold.woff2') format('woff2'),
    url('/fonts/AlegreyaSans-Bold.woff') format('woff');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Alegreya Sans';
  src:
    url('/fonts/AlegreyaSans-Italic.woff2') format('woff2'),
    url('/fonts/AlegreyaSans-Italic.woff') format('woff');
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: 'Alegreya Sans';
  src:
    url('/fonts/AlegreyaSans-BoldItalic.woff2') format('woff2'),
    url('/fonts/AlegreyaSans-BoldItalic.woff') format('woff');
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

@theme {
  --color-transparent: transparent;
  --color-white: #ffffff;
  --color-white: oklch(100% 3.5594404384177905e-8 106.37411429114086);
  --color-white-transparent: #fffffa80;
  --color-white-transparent: oklch(99.86% 0.0065 106.52 / 50.2%);
  --color-black: #000000;
  --color-black: oklch(0% 0 0);
  --color-grey-200: #999697;
  --color-grey-200: oklch(67.6% 0.0038 354.75);
  --color-grey-100: #e5e1dd;
  --color-grey-100: oklch(91.18% 0.007 67.74);
  --color-slate: #332d2e;
  --color-slate: oklch(30.4% 0.0089 6.2);
  --color-red-900: #a82c51;
  --color-red-900: oklch(49.58% 0.1611 7.64);
  --color-red-800: #b95674;
  --color-red-800: oklch(58.4% 0.1312 2.9);
  --color-red-500: #d496a8;
  --color-red-500: oklch(73.83% 0.0778 0.16);
  --color-red-200: #eed5dc;
  --color-red-200: oklch(89.56% 0.0292 358.84);
  --color-red-100: #f6eaee;
  --color-red-100: oklch(94.76% 0.014 355.01);
  --color-tan-100: #fff6f0;
  --color-tan-100: oklch(97.85% 0.01256189712240146 56.25631738338603);
  --color-green: #2ca883;
  --color-green: oklch(65.58% 0.1201 168.18);

  /* Typography */

  --font-header: 'Alegreya', serif;
  --font-body: 'Alegreya Sans', sans-serif;

  /* Font sizes: source (https://fluid-type.tolin.ski/) */

  --line-height: calc(0.6rem + 2ex);

  --text-2xs: clamp(0.64rem, 0.05vi + 0.63rem, 0.67rem);
  --text-2xs--line-height: var(--line-height);

  --text-xs: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
  --text-xs--line-height: var(--line-height);

  --text-sm: clamp(1rem, 0.34vi + 0.91rem, 1.19rem);
  --text-sm--line-height: var(--line-height);

  --text-base: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
  --text-base--line-height: var(--line-height);

  --text-md: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
  --text-md--line-height: var(--line-height);

  --text-lg: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
  --text-lg--line-height: var(--line-height);

  --text-xl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
  --text-xl--line-height: var(--line-height);

  --text-2xl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
  --text-2xl--line-height: var(--line-height);

  /* Spacing */

  --site-padding: clamp(1rem, 2vw, 2rem);
  --section-padding: clamp(7rem, 10vw, 9rem);

  /* Sizing */

  --nav-height: 98px;
}

/* Animations */

@view-transition {
  navigation: auto;
}

@media (prefers-reduced-motion: no-preference) {
  /**
    * Required class: `lsa` (initializes animations and defaults to fade-in)
    * Note: Add `no-repeat` class to prevent animations from repeating on scroll
    */
  .lsa {
    @apply opacity-0 transform transition duration-700;

    /* Slide animations */
    &.lsa-slide-up {
      @apply translate-y-4;
    }
    &.lsa-slide-down {
      @apply -translate-y-4;
    }
    &.lsa-slide-left {
      @apply -translate-x-4;
    }
    &.lsa-slide-right {
      @apply translate-x-4;
    }
    &.lsa-slide-down-right {
      @apply -translate-x-4 -translate-y-4;
    }
    &.lsa-slide-down-left {
      @apply translate-x-4 -translate-y-4;
    }
    &.lsa-slide-up-right {
      @apply -translate-x-4 translate-y-4;
    }
    &.lsa-slide-up-left {
      @apply translate-x-4 translate-y-4;
    }

    /* Handle active state */
    &.active {
      @apply opacity-100 translate-x-0 translate-y-0;
    }
  }
}

/* General */

@layer base {
  html {
    /* Scrollbar */
    scrollbar-color: var(--color-black) var(--color-white);
    scrollbar-width: thin;

    /* Font */
    @apply font-body scroll-smooth;
  }

  html,
  body {
    @apply overflow-x-hidden;
  }

  html:has(body[data-overlay-displayed='true']) {
    @apply overflow-y-hidden;
  }

  section {
    @apply py-(--section-padding) px-(--site-padding);
  }

  header,
  main,
  nav {
    @apply w-full mx-auto;
  }

  header {
    @apply pb-(--section-padding) px-(--site-padding) md:p-(--site-padding);
  }

  img,
  svg,
  video {
    @apply block w-full h-auto;
  }

  img {
    @apply rounded-3xl drop-shadow-sm;
  }

  /* Typography */

  h1,
  h2,
  h3,
  h4,
  h5 {
    @apply text-balance font-header text-black;
  }

  h1 {
    @apply text-xl;
  }

  h2 {
    @apply text-lg;
  }

  h3 {
    @apply text-md;
  }

  h4 {
    @apply text-base;
  }

  p,
  li {
    @apply text-sm text-slate text-pretty;
  }

  span {
    @apply text-sm text-pretty;
  }

  a {
    @apply hover:text-red-900 transition-all;
  }

  /* Blog post styles */

  #post {
    & h2,
    & h3,
    & h4,
    & h5,
    & h6,
    & img {
      @apply mt-[0.5lh];
    }

    & a:not(.cta) {
      @apply underline text-red-900 hover:text-red-500;
    }

    & ol,
    & ul {
      @apply flex flex-col gap-[0.5lh] pl-8 list-outside;
    }

    & ol {
      @apply list-decimal;
    }

    & ul {
      @apply list-disc;
    }
  }
}

/* Utility Classes */

@layer components {
  .container-sm {
    @apply w-full max-w-xl md:max-w-4xl mx-auto;
  }

  .container-md {
    @apply w-full max-w-xl md:max-w-6xl mx-auto;
  }

  .container-lg {
    @apply w-full max-w-xl md:max-w-screen-2xl mx-auto;
  }

  .site-icon {
    @apply w-6 stroke-1;
  }

  .site-link-2 {
    @apply hover:text-white transition-all;
  }
}

